Add color change to active tab link for improved visibility

--- a/style.css
+++ b/style.css
@@ -346,6 +346,7 @@ nav ul li a.active:hover {
   text-align: center;
   font-size: 2rem;
   margin-bottom: 20px;
+  color: #A50021;
 }
 
 .gallery-container {
