--- a/style.css
+++ b/style.css
@@ -4,19 +4,6 @@
     box-sizing: border-box;
 }
 
-@media (max-width: 768px) {
-  .cta-banner {
-    padding: 30px 20px;
-  }
-
-  .cta-banner h2 {
-    font-size: 1.8rem;
-  }
-
-  .cta-banner p {
-    font-size: 1rem;
-  }
-}
 
 body {
     font-family: 'Montserrat', sans-serif;
@@ -594,6 +581,21 @@ nav ul li a.active:hover {
   background: linear-gradient(90deg, #FFD700, #A50021);
 }
 
+@media (max-width: 768px) {
+  .cta-banner {
+    padding: 30px 20px;
+  }
+
+  .cta-banner h2 {
+    font-size: 1.8rem;
+  }
+
+  .cta-banner p {
+    font-size: 1rem;
+  }
+}
+
+
 
 /* Call to Action Button */
 .cta-button {
@@ -712,4 +714,18 @@ nav ul li a.active:hover {
         background: linear-gradient(135deg, #A50021 0%, #FFD700 100%);
         color: white;
     }
+}
+
+/* Additional map*/
+.map-section {
+  margin-top: 60px;
+  text-align: center;
+}
+
+.map-container {
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  max-width: 1000px;
+  margin: 0 auto;
 }
