--- a/style.css
+++ b/style.css
@@ -764,6 +764,20 @@ nav ul li a.active:hover {
   color: #888;
 }
 
+
+
+.footer-bottom a.creator-link {
+  color: yellow;
+  
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-bottom a.creator-link:hover {
+  color: red;
+}
+
+
 @media (max-width: 768px) {
   .footer-container {
     flex-direction: column;
